# ARCO-SAMTrack-Tutorial

./: .gitignore  CITATION.cff  LICENSE  README.md  _wam_tutorial.py  event_analysis.ipynb  event_box_region_frames.py  make_gif_serra_do_mar.py  pyproject.toml
data/hybas_sa_lev02_v1c/: hybas_sa_lev02_v1c.dbf  hybas_sa_lev02_v1c.sbn  hybas_sa_lev02_v1c.sbx  hybas_sa_lev02_v1c.shp  hybas_sa_lev02_v1c.shp.xml  hybas_sa_lev02_v1c.shx
docs/: dataset_zarr_SA_0_25_deg_daily.md
notebooks/: 00_setup_and_data.ipynb  01_event_serra_do_mar_2011.ipynb  02_aerial_river_santa_cruz.ipynb  03_enso_composites.ipynb  04_aculeo_lake_collapse.ipynb  05_megadrought_central_chile.ipynb
tools/: strip_jupytext_header.py
