[project]
name = "arco-samtrack-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "cmcrameri>=1.9",
    "dask>=2026.3.0",
    "distributed>=2026.3.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "regionmask>=0.13.0",
    "tqdm>=4.67.3",
    "xarray>=2026.4.0",
    "zarr>3.0",
]
