[project]
name = "arco-samtrack-tutorial"
version = "0.1.0"
description = "Tutorial notebooks for the SAMTrack moisture-tracking dataset (WAM2Layers backward tracking, South America, 0.25 degree daily, 1990-2019)."
readme = "README.md"
requires-python = ">=3.11"
# Versions below pin the exact stack the notebooks were authored
# against. Loosen the bounds at your own risk — the geospatial
# scientific Python stack tends to break across minor releases.
dependencies = [
    "cartopy==0.25.0",
    "cmcrameri==1.9",
    "dask==2026.3.0",
    "distributed==2026.3.0",
    "fsspec==2026.3.0",
    "geopandas==1.1.3",
    "huggingface_hub==1.12.2",
    "jupytext==1.19.1",
    "matplotlib==3.10.8",
    "netcdf4==1.7.4",
    "pillow==12.2.0",
    "regionmask==0.13.0",
    "scipy==1.17.1",
    "tqdm==4.67.3",
    "xarray==2026.4.0",
    "zarr==3.1.6",
]
